feat: User
get all User requests
