# routes/user.js
@@ -1,0 +1,8 @@
+const express = require("express");
+const { getUsers } = require("../controllers/user");
+
+const router = express.Router();
+
+router.route("/getUsers").get(getUsers);
+
+module.exports = router;
